# pdf-rag-platform

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.yml
.github/workflows/: ci.yml  deploy.yml
backend/: .env.example  .env.production.example  .gitignore  Dockerfile  alembic.ini  pyproject.toml  railway.json
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_schema_fixes_and_seed.py
backend/app/: main.py
backend/app/ai/: agents.py  embeddings.py  graph.py  llm.py  orchestrator.py  prompts.py  retriever.py  state.py  vectorstore.py
backend/app/api/v1/: billing.py  documents.py  health.py  queries.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: __init__.py  document.py  query.py  usage.py  user.py
backend/app/schemas/: document.py  query.py
backend/app/workers/: __init__.py  embeddings.py  pdf_processor.py  r2.py
backend/scripts/: entrypoint.sh
backend/tests/: test_api.py  test_chunking.py
docs/: DEPLOYMENT.md  PRODUCTION_READINESS_REPORT.md
docs/architecture/: design.md  original-design-spec.md  product.md  roadmap.md
frontend/: .env.local.example  .env.production.example  Dockerfile  middleware.ts  next.config.js  package-lock.json  package.json  tailwind.config.ts  vercel.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: ClerkProvider.tsx  Header.tsx  Sidebar.tsx  SmoothScrollProvider.tsx
frontend/lib/: api-client.ts  store.ts
frontend/scripts/: setup-clerk-auth.sh  verify-auth.sh
(+18 files in other folders)
